First-week task was done

--- a/veriasov.html
+++ b/veriasov.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
       <head>
+              <meta charset="utf-8">
               <title>Резюме Верясов А.А. </title>
+              <link rel="stylesheet" type="text/css" href="css/task_03.css">
       </head>
 
       <body>
